@@ -68,6 +68,11 @@ spaces in them are not printed.
 .I n
 as the minimun length for words to hyphenate.
 .TP
+.BI intersect_compound_level= n
+(voikkohyphenate) Set
+.I n
+as the value of option VOIKKO_INTERSECT_COMPOUND_LEVEL.
+.TP
 .BI ignore_dot= n
 .TP
 .BI accept_first_uppercase= n
