@@ -1,3 +1,10 @@
+2007-02-26 Harri Pitkänen <hatapitk@iki.fi>
+
+	* Fix the option VOIKKO_INTERSECT_COMPOUND_LEVEL, which only worked
+	  correctly with values 0 and 1. Bug report and suggested fix by
+	  Kalle Lampila.
+	* Add option intersect_compound_level=n to voikkohyphenate
+
 2007-02-16 Harri Pitkänen <hatapitk@iki.fi>
 
 	* Add replacement b <-> h to OCR suggestions
